feat: add P0 API query tools
